k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: 537765357717.dkr.ecr.us-east-1.amazonaws.com/github-events-repo:worker-latest
        imagePullPolicy: IfNotPresent
